--- a/templates/skill/new.html.twig
+++ b/templates/skill/new.html.twig
@@ -35,8 +35,8 @@
                             </svg>
                         </div>
                         <div>
-                            <h2 class="text-2xl font-bold">Créer une nouvelle compétence</h2>
-                            <p class="text-white/80">Renseignez les informations ci-dessous</p>
+                            <h2 class="text-2xl text-gray-600 font-bold">Créer une nouvelle compétence</h2>
+                            <p class="text-gray-600">Renseignez les informations ci-dessous</p>
                         </div>
                     </div>
                 </div>
