--- a/templates/category/_delete_form.html.twig
+++ b/templates/category/_delete_form.html.twig
@@ -1,4 +1,24 @@
-<form method="post" action="{{ path('app_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_category_delete', {'id': category.id}) }}" x-data="{ confirmDelete: false }" class="inline-block">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-    <button class="btn">Delete</button>
+    
+    <button type="button" @click="confirmDelete = true" class="btn-premium bg-gradient-to-r from-red-500 to-red-600 text-white font-medium px-5 py-2.5 rounded-lg shadow-lg hover:shadow-red-500/30 transition-all duration-300 flex items-center" x-show="!confirmDelete">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+        </svg>
+        Supprimer
+    </button>
+    
+    <div x-show="confirmDelete" x-cloak class="flex items-center space-x-2 animate__animated animate__fadeIn">
+        <span class="text-red-600 font-medium">Confirmer la suppression ?</span>
+        <button type="submit" class="btn-premium bg-gradient-to-r from-red-600 to-red-700 text-white font-medium px-4 py-2 rounded-lg shadow-lg hover:shadow-red-500/30 transition-all duration-300">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+            </svg>
+        </button>
+        <button type="button" @click="confirmDelete = false" class="btn-premium bg-gray-500 text-white font-medium px-4 py-2 rounded-lg shadow-lg hover:bg-gray-600 transition-all duration-300">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+            </svg>
+        </button>
+    </div>
 </form>
