Customisation du design

--- a/templates/exchange/index.html.twig
+++ b/templates/exchange/index.html.twig
@@ -9,7 +9,7 @@
                 <h1 class="text-4xl font-bold text-primary-800 mb-2">Mes Échanges</h1>
                 <p class="text-lg text-gray-600">Suivez, gérez et initiez vos échanges de compétences.</p>
             </div>
-            <a href="{{ path('app_exchange_new') }}" class="btn-premium bg-accent-500 hover:bg-accent-600 text-white mt-4 sm:mt-0">
+            <a href="{{ path('app_exchange_new') }}" class="btn-premium bg-accent-500 flex hover:bg-accent-600 rounded-full px-4 py-2 text-white mt-2 sm:mt-0">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
                 </svg>
