--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -395,7 +395,7 @@
                                         </div>
                                         <div class="ml-4">
                                             <h4 class="text-sm font-semibold text-primary-200">Téléphone</h4>
-                                            <p class="text-white">+33 1 23 45 67 89</p>
+                                            <p class="text-white">+224 620 32 79 06</p>
                                         </div>
                                     </div>
 
@@ -410,7 +410,7 @@
                                         </div>
                                         <div class="ml-4">
                                             <h4 class="text-sm font-semibold text-primary-200">Adresse</h4>
-                                            <p class="text-white">123 Rue de l'Échange<br>75000 Paris, France</p>
+                                            <p class="text-white">Kagbelen-Cimenterie</p>Guinée - Conakry</p>
                                         </div>
                                     </div>
                                 </div>
