--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -83,7 +83,7 @@
             </div>
 
             <div>
-                <button type="submit" class="group relative w-full flex justify-center btn-premium bg-primary-600 hover:bg-primary-700 text-white">
+                <button type="submit" class="group relative w-full flex justify-center btn-premium bg-primary-500 rounded-full px-4 py-2 hover:bg-primary-700 text-white">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                         <svg class="h-5 w-5 text-primary-300 group-hover:text-primary-200 transition ease-in-out duration-150" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
