--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -96,7 +96,7 @@
             </div>
 
             <div>
-                <button type="submit" class="group relative w-full flex justify-center btn-premium bg-primary-600 hover:bg-primary-700 text-white">
+                <button type="submit" class="group relative w-full flex justify-center btn-premium bg-primary-500 rounded-full px-4 py-2  hover:bg-primary-700 text-white">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                         <svg class="h-5 w-5 text-primary-500 group-hover:text-primary-400 transition ease-in-out duration-150" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
