--- a/templates/skill/show.html.twig
+++ b/templates/skill/show.html.twig
@@ -40,7 +40,7 @@
             <!-- Carte principale -->
             <div class="bg-white rounded-2xl premium-shadow overflow-hidden" data-aos="zoom-in" data-aos-delay="200">
                 <!-- Header de la carte -->
-                <div class="bg-gradient-to-r from-primary-700 to-primary-800 p-6 text-white">
+                <div class="header-gradient p-6 text-white">
                     <div class="flex items-center">
                         <div class="p-3 bg-white/10 rounded-lg mr-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
