Customisation du design

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -360,7 +360,7 @@
                     </div>
 
                     <!-- Colonne de droite - Informations avec effet de superposition -->
-                    <div class="relative p-10 lg:p-12 text-white bg-gradient-to-br from-primary-600 to-primary-800 overflow-hidden">
+                    <div class="relative p-10 lg:p-12 text-white hero-gradient overflow-hidden">
                         <!-- Éléments décoratifs flottants -->
                         <div class="absolute -top-20 -right-20 w-64 h-64 bg-white/10 rounded-full mix-blend-overlay"></div>
                         <div class="absolute bottom-0 left-0 w-full h-1/2 bg-gradient-to-t from-black/20 to-transparent"></div>
