--- a/templates/exchange/_form.html.twig
+++ b/templates/exchange/_form.html.twig
@@ -60,7 +60,7 @@
             <a href="{{ path('app_exchange_index') }}" class="btn btn-secondary">
                 Annuler
             </a>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary bg-blue-500 hover:bg-blue-600 text-white transition-colors duration-200 rounded-lg px-6 py-2">
                 Envoyer la demande
             </button>
         </div>
